tests/neg/singleton-ops-any.check
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:4:22 --------------------------------------------------
4 |  val t1: 10 == "5" = true // error
  |                      ^^^^
  |                      Found:    (true : Boolean)
  |                      Required: (false : Boolean)
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:5:21 --------------------------------------------------
5 |  val t2: 10 == 10 = false // error
  |                     ^^^^^
  |                     Found:    (false : Boolean)
  |                     Required: (true : Boolean)
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:7:23 --------------------------------------------------
7 |  val t3: false != 5 = false // error
  |                       ^^^^^
  |                       Found:    (false : Boolean)
  |                       Required: (true : Boolean)
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:8:21 --------------------------------------------------
8 |  val t4: 10 != 10 = true // error
  |                     ^^^^
  |                     Found:    (true : Boolean)
  |                     Required: (false : Boolean)
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:10:31 -------------------------------------------------
10 |  val t5: "dotty" == "scala" = true // error
   |                               ^^^^
   |                               Found:    (true : Boolean)
   |                               Required: (false : Boolean)
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:11:31 -------------------------------------------------
11 |  val t6: "dotty" == "dotty" = false // error
   |                               ^^^^^
   |                               Found:    (false : Boolean)
   |                               Required: (true : Boolean)
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:13:31 -------------------------------------------------
13 |  val t7: "dotty" != "scala" = false // error
   |                               ^^^^^
   |                               Found:    (false : Boolean)
   |                               Required: (true : Boolean)
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:14:31 -------------------------------------------------
14 |  val t8: "dotty" != "dotty" = true // error
   |                               ^^^^
   |                               Found:    (true : Boolean)
   |                               Required: (false : Boolean)
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:17:35 -------------------------------------------------
17 |  val t9: List[Int] == List[Int] = true // error
   |                                   ^^^^
   |                                   Found:    (true : Boolean)
   |                                   Required: List[Int] == List[Int]
-- [E007] Type Mismatch Error: tests/neg/singleton-ops-any.scala:18:24 -------------------------------------------------
18 |  val t10: Int == Int = false // error
   |                        ^^^^^
   |                        Found:    (false : Boolean)
   |                        Required: Int == Int
